--- a/src/index.html
+++ b/src/index.html
@@ -7,16 +7,51 @@
 </head>
 <body>
   <div class="album py-5 bg-light">
-    <div class="container">
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+    <div class="container px-4">
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 align-items-center gx-5">
         <div class="col">
-          <div class="card" style="width: 18rem;">
+          <div class="card mb-3">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
+              <h5 class="card-title mb-3">申領服務</h5>
+              <a href="#" class="card-subtitle border py-2 border mb-3">使用分區說明</a>
+              <a href="#" class="card-subtitle border py-2 border">地形圖資申領</a>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title mb-3">平台首頁管理</h5>
+              <a href="#" class="card-subtitle border py-2 border mb-3">公告專區</a>
+              <a href="#" class="card-subtitle border py-2 border mb-3">都市發展儀表板</a>
+              <a href="#" class="card-subtitle border py-2 border">宣傳影片</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card mb-3">
+            <div class="card-body">
+              <h5 class="card-title mb-3">都市計畫</h5>
+              <a href="#" class="card-subtitle border py-2 border mb-3">都市計畫</a>
+              <a href="#" class="card-subtitle border py-2 border mb-3">使用分區</a>
+              <a href="#" class="card-subtitle border py-2 border">都市計畫樁位</a>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title mb-3">國土計畫</h5>
+              <a href="#" class="card-subtitle border py-2 border mb-3">國土計畫</a>
+              <a href="#" class="card-subtitle border py-2 border">國土功能分區</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card mb-3">
+            <div class="card-body">
+              <h5 class="card-title mb-3">行政業務</h5>
+              <a href="#" class="card-subtitle border py-2 border mb-3">都計裁罰</a>
+              <a href="#" class="card-subtitle border py-2 border mb-3">建管裁罰</a>
+              <a href="#" class="card-subtitle border py-2 border mb-3">都計審查案件</a>
+              <a href="#" class="card-subtitle border py-2 border mb-3">行政救濟案件</a>
+              <a href="#" class="card-subtitle border py-2 border mb-3">圖資下載</a>
             </div>
           </div>
         </div>
