--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,9 @@
   <title>Document</title>
 </head>
 <body>
-  <div class="album py-5 bg-light">
+  <div class="album py-5 bg-light ">
     <div class="container px-4">
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 align-items-center gx-5">
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 gx-5">
         <div class="col">
           <div class="card mb-3">
             <div class="card-body">
