--- a/src/html/portal.html
+++ b/src/html/portal.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <meta name="viewport" content="<%= htmlWebpackPlugin.options.viewport %>">
+  <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
-  <div class="album py-5 bg-light ">
-    <div class="container px-4">
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 gx-5">
+  <div class="aaa">
+    <div class="container h-100 d-flex flex-column">
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 gx-5 flex-grow-1">
         <div class="col">
           <div class="card mb-3">
             <div class="card-body">
