--- a/src/html/portal.html
+++ b/src/html/portal.html
@@ -13,7 +13,7 @@
           <div class="card mb-3">
             <div class="card-body">
               <h5 class="card-title mb-3">申領服務</h5>
-              <a href="#" class="card-subtitle border py-2 border mb-3">使用分區說明</a>
+              <a href="./subsystem.html" class="card-subtitle border py-2 border mb-3">使用分區說明</a>
               <a href="#" class="card-subtitle border py-2 border">地形圖資申領</a>
             </div>
           </div>
