--- a/src/html/portal.html
+++ b/src/html/portal.html
@@ -6,19 +6,19 @@
   <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
-  <div class="aaa">
-    <div class="container h-100 d-flex flex-column">
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 gx-5 flex-grow-1">
+  <div class="portal d-flex align-items-center vh-100">
+    <div class="container flex-column ">
+      <div class=" row row-cols-1 row-cols-sm-2 row-cols-md-3 gx-5 flex-grow-1">
         <div class="col">
           <div class="card mb-3">
-            <div class="card-body">
+            <div class="card-body portal-container-card">
               <h5 class="card-title mb-3">申領服務</h5>
               <a href="./subsystem.html" class="card-subtitle border py-2 border mb-3">使用分區說明</a>
               <a href="#" class="card-subtitle border py-2 border">地形圖資申領</a>
             </div>
           </div>
           <div class="card">
-            <div class="card-body">
+            <div class="card-body portal-container-card">
               <h5 class="card-title mb-3">平台首頁管理</h5>
               <a href="#" class="card-subtitle border py-2 border mb-3">公告專區</a>
               <a href="#" class="card-subtitle border py-2 border mb-3">都市發展儀表板</a>
@@ -28,7 +28,7 @@
         </div>
         <div class="col">
           <div class="card mb-3">
-            <div class="card-body">
+            <div class="card-body portal-container-card">
               <h5 class="card-title mb-3">都市計畫</h5>
               <a href="#" class="card-subtitle border py-2 border mb-3">都市計畫</a>
               <a href="#" class="card-subtitle border py-2 border mb-3">使用分區</a>
@@ -36,7 +36,7 @@
             </div>
           </div>
           <div class="card">
-            <div class="card-body">
+            <div class="card-body portal-container-card">
               <h5 class="card-title mb-3">國土計畫</h5>
               <a href="#" class="card-subtitle border py-2 border mb-3">國土計畫</a>
               <a href="#" class="card-subtitle border py-2 border">國土功能分區</a>
@@ -45,7 +45,7 @@
         </div>
         <div class="col">
           <div class="card mb-3">
-            <div class="card-body">
+            <div class="card-body portal-container-card">
               <h5 class="card-title mb-3">行政業務</h5>
               <a href="#" class="card-subtitle border py-2 border mb-3">都計裁罰</a>
               <a href="#" class="card-subtitle border py-2 border mb-3">建管裁罰</a>
