--- a/src/html/portal.html
+++ b/src/html/portal.html
@@ -18,11 +18,11 @@
             </div>
           </div>
           <div class="card">
-            <div class="card-body portal-container-card">
+            <div class="card-body portal-container-unable">
               <h5 class="card-title mb-3">平台首頁管理</h5>
-              <a href="#" class="card-subtitle border py-2 border mb-3">公告專區</a>
-              <a href="#" class="card-subtitle border py-2 border mb-3">都市發展儀表板</a>
-              <a href="#" class="card-subtitle border py-2 border">宣傳影片</a>
+              <a href="#" class="card-subtitle-unable border py-2 border mb-3">公告專區</a>
+              <a href="#" class="card-subtitle-unable border py-2 border mb-3">都市發展儀表板</a>
+              <a href="#" class="card-subtitle-unable border py-2 border">宣傳影片</a>
             </div>
           </div>
         </div>
