--- a/src/html/portal.html
+++ b/src/html/portal.html
@@ -2,10 +2,11 @@
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="<%= htmlWebpackPlugin.options.viewport %>">
-  <title><%= htmlWebpackPlugin.options.title %></title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>新竹後台入口網站</title>
 </head>
 <body>
+  <div id="slide-bg" class="slide-bg"></div>
   <div class="portal d-flex align-items-center vh-100">
     <div class="container flex-column">
       <div class=" row row-cols-1 row-cols-sm-2 row-cols-md-3 gx-5 flex-grow-1">
