--- a/src/html/portal.html
+++ b/src/html/portal.html
@@ -3,56 +3,62 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>新竹後台入口網站</title>
+  <title>新竹都市計畫後台入口網站</title>
 </head>
 <body>
   <div id="slide-bg" class="slide-bg"></div>
   <div class="portal d-flex align-items-center vh-100">
-    <div class="container flex-column">
-      <div class=" row row-cols-1 row-cols-sm-2 row-cols-md-3 gx-5 flex-grow-1">
+    <div class="container">
+      <div class="row text-align-center header">
+        <div class="col d-flex align-items-center justify-content-center fw-bold">
+          <img src="../img/icon_logo.png" class="logo">
+          <h3 class="text-light ms-3">新竹市都市計畫資訊服務網</h3>
+        </div>
+      </div>
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 gx-5 flex-grow-1">
         <div class="col">
           <div class="card mb-3">
-            <div class="card-body portal-container-card">
+            <div class="card-body ">
               <h5 class="card-title mb-3">申領服務</h5>
-              <a href="./subsystem.html" class="card-subtitle border py-2 border mb-3">使用分區說明</a>
-              <a href="#" class="card-subtitle border py-2 border">地形圖資申領</a>
+              <a href="./subsystem.html" class="card-subtitle  py-2  mb-3">使用分區說明</a>
+              <a href="#" class="card-subtitle  py-2 ">地形圖資申領</a>
             </div>
           </div>
-          <div class="card">
-            <div class="card-body portal-container-unable">
+          <div class="card portal-container-unable">
+            <div class="card-body">
               <h5 class="card-title mb-3">平台首頁管理</h5>
-              <a href="#" class="card-subtitle-unable border py-2 border mb-3">公告專區</a>
-              <a href="#" class="card-subtitle-unable border py-2 border mb-3">都市發展儀表板</a>
-              <a href="#" class="card-subtitle-unable border py-2 border">宣傳影片</a>
+              <a href="#" class="card-subtitle-unable  py-2  mb-3">公告專區</a>
+              <a href="#" class="card-subtitle-unable  py-2  mb-3">都市發展儀表板</a>
+              <a href="#" class="card-subtitle-unable  py-2 ">宣傳影片</a>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card mb-3">
-            <div class="card-body portal-container-card">
+            <div class="card-body ">
               <h5 class="card-title mb-3">都市計畫</h5>
-              <a href="#" class="card-subtitle border py-2 border mb-3">都市計畫</a>
-              <a href="#" class="card-subtitle border py-2 border mb-3">使用分區</a>
-              <a href="#" class="card-subtitle border py-2 border">都市計畫樁位</a>
+              <a href="#" class="card-subtitle  py-2  mb-3">都市計畫</a>
+              <a href="#" class="card-subtitle-unable  py-2  mb-3">使用分區</a>
+              <a href="#" class="card-subtitle  py-2 ">都市計畫樁位</a>
             </div>
           </div>
           <div class="card">
-            <div class="card-body portal-container-card">
+            <div class="card-body ">
               <h5 class="card-title mb-3">國土計畫</h5>
-              <a href="#" class="card-subtitle border py-2 border mb-3">國土計畫</a>
-              <a href="#" class="card-subtitle border py-2 border">國土功能分區</a>
+              <a href="#" class="card-subtitle  py-2  mb-3">國土計畫</a>
+              <a href="#" class="card-subtitle-unable  py-2 ">國土功能分區</a>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card mb-3">
-            <div class="card-body portal-container-card">
+            <div class="card-body ">
               <h5 class="card-title mb-3">行政業務</h5>
-              <a href="#" class="card-subtitle border py-2 border mb-3">都計裁罰</a>
-              <a href="#" class="card-subtitle border py-2 border mb-3">建管裁罰</a>
-              <a href="#" class="card-subtitle border py-2 border mb-3">都計審查案件</a>
-              <a href="#" class="card-subtitle border py-2 border mb-3">行政救濟案件</a>
-              <a href="#" class="card-subtitle border py-2 border mb-3">圖資下載</a>
+              <a href="#" class="card-subtitle  py-2  mb-3">都計裁罰</a>
+              <a href="#" class="card-subtitle  py-2  mb-3">建管裁罰</a>
+              <a href="#" class="card-subtitle  py-2  mb-3">都計審查案件</a>
+              <a href="#" class="card-subtitle  py-2  mb-3">行政救濟案件</a>
+              <a href="#" class="card-subtitle  py-2  mb-3">圖資下載</a>
             </div>
           </div>
         </div>
