--- a/src/html/subsystem.html
+++ b/src/html/subsystem.html
@@ -2,8 +2,8 @@
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="<%= htmlWebpackPlugin.options.viewport %>">
-  <title><%= htmlWebpackPlugin.options.title %></title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>新竹都市計畫後台入口網站</title>
 </head>
 <body id="page-top">
 
