--- a/src/html/portal.html
+++ b/src/html/portal.html
@@ -6,13 +6,13 @@
   <title>新竹都市計畫後台入口網站</title>
 </head>
 <body>
-  <div id="slide-bg" class="slide-bg"></div>
+  <!-- <div id="slide-bg" class="slide-bg"></div> -->
   <div class="portal d-flex align-items-center vh-100">
     <div class="container">
       <div class="row text-align-center header">
         <div class="col d-flex align-items-center justify-content-center fw-bold">
           <img src="../img/icon_logo.png" class="logo">
-          <h3 class="text-light ms-3">新竹市都市計畫資訊服務網</h3>
+          <h2 class="text-light ms-3 logo-text">新竹市都市計畫資訊服務網</h2>
         </div>
       </div>
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 gx-5 flex-grow-1">
