--- a/src/html/portal.html
+++ b/src/html/portal.html
@@ -7,15 +7,15 @@
 </head>
 <body>
   <div id="slide-bg" class="slide-bg"></div>
-  <div class="portal d-flex align-items-center vh-100">
+  <div class="portal d-flex align-items-center">
     <div class="container">
       <div class="row text-align-center header">
         <div class="col d-flex align-items-center justify-content-center fw-bold">
           <img src="../img/icon_logo.png" class="logo">
-          <h3 class="text-light ms-3">新竹市都市計畫資訊服務網</h3>
+          <h3 class="text-light ms-3">新竹市都市計畫資訊服務網站</h3>
         </div>
       </div>
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 gx-5 flex-grow-1">
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 gx-5 main">
         <div class="col">
           <div class="card mb-3">
             <div class="card-body ">
